cmake_minimum_required(VERSION 3.21)
project(Florea_Madalin_Alexandru_3_obligatoriu)

set(CMAKE_CXX_STANDARD 14)

add_executable(Florea_Madalin_Alexandru_3_obligatoriu_1 Florea_Madalin-Alexandru_1_obligatoriu_1.cpp)
add_executable(Florea_Madalin_Alexandru_3_obligatoriu_2 Florea_Madalin-Alexandru_1_obligatoriu_2.cpp)
add_executable(Florea_Madalin_Alexandru_3_obligatoriu_3 Florea_Madalin-Alexandru_1_obligatoriu_3.cpp)
add_executable(Florea_Madalin_Alexandru_3_obligatoriu_4 Florea_Madalin-Alexandru_1_obligatoriu_4.cpp)
add_executable(Florea_Madalin_Alexandru_3_obligatoriu_5 Florea_Madalin-Alexandru_1_obligatoriu_5.cpp)
add_executable(Florea_Madalin_Alexandru_3_obligatoriu_6 Florea_Madalin-Alexandru_1_obligatoriu_6.cpp)